# mmm

./: .clangd  AUTHORS  ChangeLog  README.md  meson.build
src/: converter.c  converter.h  dislin.h  matrixreader.c  matrixreader.h  mmm.c  mmm.h  print.c  print.h  scratch
